[gd_scene load_steps=16 format=3 uid="uid://ctwsoitc5naif"]

[ext_resource type="Texture2D" uid="uid://dcrjxqkg6hkus" path="res://assets/ui/heads_up/headsup_panel.png" id="1_adjuv"]
[ext_resource type="Script" path="res://ui/hud.gd" id="1_hjmpk"]
[ext_resource type="Texture2D" uid="uid://d3moe68odlj27" path="res://assets/ui/heads_up/tower_icon.png" id="2_38tki"]
[ext_resource type="Texture2D" uid="uid://dx34xpp2oy04i" path="res://assets/ui/heads_up/lifebar_window.png" id="3_duwpa"]
[ext_resource type="Texture2D" uid="uid://bdut56jurb3c1" path="res://assets/ui/heads_up/lifebar.png" id="4_66ym4"]
[ext_resource type="Texture2D" uid="uid://5oant8sx0fnk" path="res://assets/ui/heads_up/coin_icon.png" id="5_620j3"]
[ext_resource type="Texture2D" uid="uid://bknsxfnyglwek" path="res://assets/ui/heads_up/currency_window.png" id="6_hfvs3"]
[ext_resource type="PackedScene" uid="uid://ddtv7a4grl6iu" path="res://ui/pause.tscn" id="8_grf61"]
[ext_resource type="PackedScene" uid="uid://d2rxmk60qmnu4" path="res://ui/game_over.tscn" id="9_dnqqj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dfgdl"]
texture = ExtResource("1_adjuv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hy5pm"]
texture = ExtResource("6_hfvs3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gp8jp"]
texture = ExtResource("6_hfvs3")
modulate_color = Color(1, 1, 1, 0.627451)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2g1kn"]
texture = ExtResource("6_hfvs3")
modulate_color = Color(1, 1, 1, 0.627451)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tsvt7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ovfdb"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_hjmpk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -351.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 158.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_dfgdl")

[node name="Rows" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 40.0
offset_right = 55.0
offset_bottom = 80.0

[node name="Health" type="HBoxContainer" parent="Control/Panel/Rows"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Control/Panel/Rows/Health"]
layout_mode = 2
texture = ExtResource("2_38tki")

[node name="HealthBar" type="TextureProgressBar" parent="Control/Panel/Rows/Health"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
texture_under = ExtResource("3_duwpa")
texture_progress = ExtResource("4_66ym4")
texture_progress_offset = Vector2(4, 4)

[node name="Money" type="HBoxContainer" parent="Control/Panel/Rows"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Control/Panel/Rows/Money"]
layout_mode = 2
texture = ExtResource("5_620j3")

[node name="MoneyLabel" type="Label" parent="Control/Panel/Rows/Money"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_hy5pm")
text = "10,000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 102.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_gp8jp")
text = "Wave: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWave" type="Panel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 10.0
offset_right = 172.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2g1kn")

[node name="Rows" type="HBoxContainer" parent="Control/NextWave"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/NextWave/Rows"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_tsvt7")
text = "Next wave in:"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="Control/NextWave/Rows"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_ovfdb")
text = "5"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Control/NextWave"]
unique_name_in_owner = true
one_shot = true

[node name="Menus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Pause" parent="Menus" instance=ExtResource("8_grf61")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1000.0
offset_bottom = 500.0
grow_horizontal = 1
grow_vertical = 1

[node name="GameOver" parent="Menus" instance=ExtResource("9_dnqqj")]
visible = false
layout_mode = 1
offset_left = 445.0
offset_top = 276.0
offset_right = 1445.0
offset_bottom = 776.0

[connection signal="timeout" from="Control/NextWave/Timer" to="." method="_on_timer_timeout"]
